Bug 13475 - SDT_V3 arm can't parse operand '-4@r3'
: SDT_V3 arm can't parse operand '-4@r3'
Status: RESOLVED FIXED
Product: systemtap
Classification: Unclassified
Component: translator
: unspecified
: P2 normal
: ---
Assigned To: Unassigned
:
:
:
:
  Show dependency treegraph
 
Reported: 2011-12-07 12:30 UTC by Mark Wielaard
Modified: 2012-04-02 19:26 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Wielaard 2011-12-07 12:30:29 UTC
The dtrace_clone.exp testcase generates binaries which contain:

Note section [30] '.note.stapsdt' of 324 bytes at offset 0xc44:
  Owner          Data size  Type
  stapsdt               30  Version: 3
    PC: 0x8670, Base: 0x8a30, Semaphore: 0x10bb4
    Provider: test, Name: child2, Args: '-4@r3'
  stapsdt               30  Version: 3
    PC: 0x86b0, Base: 0x8a30, Semaphore: 0x10bb0
    Provider: test, Name: child1, Args: '-4@r3'
  stapsdt               42  Version: 3
    PC: 0x86f4, Base: 0x8a30, Semaphore: 0x10bb6
    Provider: test, Name: child2_pid, Args: '-4@[fp, #-12]'
  stapsdt               28  Version: 3
    PC: 0x8884, Base: 0x8a30, Semaphore: 0x10bac
    Provider: test, Name: main, Args: '-4@r3'
  stapsdt               42  Version: 3
    PC: 0x88bc, Base: 0x8a30, Semaphore: 0x10bb2
    Provider: test, Name: child1_pid, Args: '-4@[fp, #-24]'
  stapsdt               24  Version: 3
    PC: 0x8948, Base: 0x8a30, Semaphore: 0x10bae
    Provider: test, Name: main2, Args: ''
Comment 1 Frank Ch. Eigler 2012-04-02 19:26:53 UTC
commit 272c903